// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NoPlaces_snapchots NoPlaces_with_Err 1`] = `
<div
  className="cities"
>
  <div
    className="cities__places-container cities__places-container--empty container"
  >
    <section
      className="cities__no-places"
    >
      <div
        className="err-message"
        style={
          Object {
            "color": "red",
            "margin": "10px auto",
            "textAlign": "center",
          }
        }
      >
        Error
      </div>
      <div
        className="cities__status-wrapper tabs__content"
      >
        <b
          className="cities__status"
        >
          No places to stay available
        </b>
        <p
          className="cities__status-description"
        >
          We could not find any property availbale at the moment in Dusseldorf
        </p>
      </div>
    </section>
    <div
      className="cities__right-section"
    />
  </div>
</div>
`;

exports[`NoPlaces_snapchots NoPlaces_without_Err 1`] = `
<div
  className="cities"
>
  <div
    className="cities__places-container cities__places-container--empty container"
  >
    <section
      className="cities__no-places"
    >
      <div
        className="cities__status-wrapper tabs__content"
      >
        <b
          className="cities__status"
        >
          No places to stay available
        </b>
        <p
          className="cities__status-description"
        >
          We could not find any property availbale at the moment in Dusseldorf
        </p>
      </div>
    </section>
    <div
      className="cities__right-section"
    />
  </div>
</div>
`;
